Added HTML structure of website and created BEM classes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wizytówka - Dawid Kłos</title>
     <link href="css/normalize.css" rel="stylesheet" type="text/css" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
-
+    <main class="main">
+    <article class="bussines-card">
+        <img class="bussines-card__avatar" src="" alt="" />
+        <header class="bussines-card__header">
+            <h1 class="bussines-card__name">Imię i nazwisko</h1>
+            <p class="bussines-card__position">Stanowisko</p>
+        </header>
+        <p class="bussines-card__description">Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. </p>
+        <p class="bussines-card__description">W sieci: Facebook, Github, Instagram.</p>
+    </article>
+    </main>
 
   </body>
 </html>
