Added new avatar. Also, added new content and styles for the bussines card

--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
   </head>
   <body>
     <main class="main">
-    <article class="bussines-card">
-        <img class="bussines-card__avatar" src="" alt="" />
+      <article class="bussines-card">
+        <img
+          class="bussines-card__avatar"
+          src="img/avatar.png"
+          alt="Wyluzowany frontendowiec avatar"
+        />
+        <div class="container">
         <header class="bussines-card__header">
-            <h1 class="bussines-card__name">Imię i nazwisko</h1>
-            <p class="bussines-card__position">Stanowisko</p>
+          <h1 class="bussines-card__name">Imię i nazwisko</h1>
+          <p class="bussines-card__position">Stanowisko</p>
         </header>
-        <p class="bussines-card__description">Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. </p>
-        <p class="bussines-card__description">W sieci: Facebook, Github, Instagram.</p>
-    </article>
+        <p class="bussines-card__description">
+          Wulkanizator z <strong class="special">kilkuletnim doświadczeniem</strong> w trakcie zmieniania
+          branży. We wrześniu zaczyna <strong class="special">studia w Wielkiej Brytanii</strong> a przed
+          tym zdobywa tajniki Frontendu z Mackiem Korsanem i całą ekipą
+        <strong class="special">WTF: Co ten frontend.</strong>Uwielbia uczyć się nowych rzeczy, a programowanie
+        daje mu ogromne pole do popisu.
+        </p>
+        <p class="bussines-card__description">
+          W sieci: <a href="#">Facebook</a>, <a href="#">Github</a>, <a href="#">Instagram</a>.
+        </p>
+      </div>
+      </article>
     </main>
-
   </body>
 </html>
