Final styles for the website. Improved person description and filled names and other fields

--- a/index.html
+++ b/index.html
@@ -15,22 +15,26 @@
           src="img/avatar.png"
           alt="Wyluzowany frontendowiec avatar"
         />
-        <div class="container">
-        <header class="bussines-card__header">
-          <h1 class="bussines-card__name">Imię i nazwisko</h1>
-          <p class="bussines-card__position">Stanowisko</p>
-        </header>
-        <p class="bussines-card__description">
-          Wulkanizator z <strong class="special">kilkuletnim doświadczeniem</strong> w trakcie zmieniania
-          branży. We wrześniu zaczyna <strong class="special">studia w Wielkiej Brytanii</strong> a przed
-          tym zdobywa tajniki Frontendu z Mackiem Korsanem i całą ekipą
-        <strong class="special">WTF: Co ten frontend.</strong>Uwielbia uczyć się nowych rzeczy, a programowanie
-        daje mu ogromne pole do popisu.
-        </p>
-        <p class="bussines-card__description">
-          W sieci: <a href="#">Facebook</a>, <a href="#">Github</a>, <a href="#">Instagram</a>.
-        </p>
-      </div>
+        <div>
+          <header class="bussines-card__header">
+            <h1 class="bussines-card__name">Dawid Kłos</h1>
+            <p class="bussines-card__position">Junior Frontend Developer</p>
+          </header>
+          <p class="bussines-card__description">
+            Wulkanizator z
+            <strong class="special">kilkuletnim doświadczeniem</strong> w
+            trakcie zmieniania branży. Mieszka w Walii i we wrześniu zaczyna
+            swoje wymarzone
+            <strong class="special">studia informatyczne</strong>. Uczestnik
+            szkolenia<strong class="special"> WTF: Co ten frontend </strong>, które
+            prowadzi najlepszy nauczyciel Frontendu w Polsce. Uwielbia uczyć się
+            nowych rzeczy, a programowanie daje mu ogromne pole do popisu.
+          </p>
+          <p class="bussines-card__description">
+            W sieci: <a href="#">Facebook</a>, <a href="#">Github</a>,
+            <a href="#">Instagram</a>.
+          </p>
+        </div>
       </article>
     </main>
   </body>
