Added links to the socialmedias and the GitHub.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             nowych rzeczy, a programowanie daje mu ogromne pole do popisu.
           </p>
           <p class="bussines-card__description">
-            W sieci: <a href="#">Facebook</a>, <a href="#">Github</a>,
+            W sieci: <a href="https://www.facebook.com/masterlw/">Facebook</a>, <a href="https://github.com/Dawid-Klos">Github</a>,
             <a href="#">Instagram</a>.
           </p>
         </div>
